force-apps/deploy/main/default/objects/Contact/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <label>BirthDate</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>