force-apps/deploy/main/default/objects/Contact/fields/CustomerId__c.field-meta.xml
<CustomField>
    <fullName>CustomerId__c</fullName>
    <externalId>true</externalId>
    <label>Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>