force-apps/deploy/main/default/objects/Contact/fields/DateBirth__c.field-meta.xml
<CustomField>
    <fullName>DateBirth__c</fullName>
    <label>BirthDate</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>