force-apps/deploy/main/default/objects/Contact/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <formula>FirstName + &apos; &apos; + IF( MiddleName__c != &apos;&apos;, MiddleName__c + &apos; &apos;, &apos;&apos;) +  LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>