force-apps/deploy/main/default/objects/Contact/fields/IndividualId__c.field-meta.xml
<CustomField>
    <fullName>IndividualId__c</fullName>
    <externalId>true</externalId>
    <label>IndividualId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>