force-apps/deploy/main/default/objects/Contact/fields/TaxRatePercent__c.field-meta.xml
<CustomField>
    <fullName>TaxRatePercent__c</fullName>
    <label>TaxRatePercent</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>