force-apps/deploy/main/default/objects/Contact/fields/WebSiteURL__c.field-meta.xml
<CustomField>
    <fullName>WebSiteURL__c</fullName>
    <label>WebSiteURL</label>
    <type>Url</type>
</CustomField>