force-apps/deploy/main/default/objects/Contact/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>FullName__c</columns>
    <columns>BirthDate__c</columns>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>MiddleName__c</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>