force-apps/deploy/main/default/objects/Contact/listViews/ETOrchestrateDC.listView-meta.xml
<ListView>
    <fullName>ETOrchestrateDC</fullName>
    <columns>FULL_NAME</columns>
    <columns>CustomerId__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>PersonName__c</columns>
    <columns>DateBirth__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE6</columns>
    <columns>CONTACT.PHONE4</columns>
    <columns>CONTACT.PHONE5</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.PHONE1</columns>
    <filterScope>Everything</filterScope>
    <label>ETOrchestrateDC</label>
</ListView>